# s3-bucket-browser

./: Cargo.toml  PACKAGING.md  README.md  index.html  justfile
.github/workflows/: ci.yml  release.yml
assets/: generate-icons.sh  s3-explorer.desktop
src/: app.rs  async_rt.rs  credentials.rs  download.rs  lib.rs  main.rs  upload.rs  web.rs
src/storage/: backend.rs  local.rs  mod.rs  path.rs  s3.rs
src/ui/: config.rs  file_list.rs  font.rs  sidebar.rs  toolbar.rs
