[package]
name = "s3-explorer"
version = "0.1.0"
edition = "2024"
description = "A native GUI for browsing S3-compatible buckets (AWS S3, Backblaze B2, MinIO, …)"
license = "MIT"
repository = "https://github.com/dilawar/bucket-browser"

[[bin]]
name = "s3-explorer"
path = "src/main.rs"

[lib]
name = "s3_explorer"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.31", features = ["glow"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }

anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.27", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
object_store = { version = "0.11", features = ["aws"] }
aes-gcm = "0.10"
rand = "0.8"
directories = "5"
toml = "0.8"
urlencoding = "2"
mime_guess = "2"
bytes = "1"
rfd = "0.15"
futures = "0.3"
http = "1"
zip = "2"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
